[gd_scene load_steps=4 format=3 uid="uid://7mgaervmad11"]

[ext_resource type="Script" uid="uid://7pgnfdkadf0k" path="res://Scenes/Spinner/spinner.gd" id="1_wlxnq"]
[ext_resource type="Texture2D" uid="uid://b2erbxo8ogs38" path="res://Images/Spinner/Hit-Ring.png" id="8_jckkb"]
[ext_resource type="Texture2D" uid="uid://c2nn4ao3c018l" path="res://Skins/Default Skin/Cursor.png" id="13_xbnr6"]

[node name="Spinner" type="Node2D"]
script = ExtResource("1_wlxnq")

[node name="SubRoot" type="Node2D" parent="."]

[node name="HitRing" type="Node2D" parent="SubRoot"]

[node name="HitRingSprite" type="Sprite2D" parent="SubRoot/HitRing"]
texture = ExtResource("8_jckkb")

[node name="Anchor" type="Node2D" parent="SubRoot"]

[node name="Cursors" type="Node2D" parent="SubRoot/Anchor"]

[node name="CursorLeft" type="Sprite2D" parent="SubRoot/Anchor/Cursors"]
z_index = 10
position = Vector2(-450, 0)
texture = ExtResource("13_xbnr6")

[node name="CursorRight" type="Sprite2D" parent="SubRoot/Anchor/Cursors"]
z_index = 10
position = Vector2(450, 0)
texture = ExtResource("13_xbnr6")
